Bug fix and add BundlePolicy to WebRTCBin